# fusion-events

./: README.md  pyproject.toml
src/fusion_events/: __init__.py  scraper.py
src/fusion_events/spiders/: __init__.py
src/fusion_events/spiders/fotmob/: match.py
src/fusion_events/spiders/understats/: __init__.py  _common.py  match.py
tests/data/understats/: match-22256.html
tests/spiders/: test_understats.py
