[project]
name = "fusion-events"
version = "0.0.1"
description = "Add your description here"
authors = [
    { name = "tanzhijian", email = "tanzhijianorg@outlook.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "kloppy>=3.14.0",
    "parsel>=1.9.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.6",
    "mypy>=1.10.0",
    "pytest>=8.2.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fusion_events"]


[tool.ruff]
lint.select = ["E", "F", "I"]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests",]
